; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-db/extr_query.c_query_expect_eof.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-db/extr_query.c_query_expect_eof.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buffer = type { i64, i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.buffer*, %struct.buffer*, i8**)* @query_expect_eof to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @query_expect_eof(%struct.buffer* noalias sret %0, %struct.buffer* byval(%struct.buffer) align 8 %1, i8** %2) #0 {
  %4 = alloca i8**, align 8
  %5 = alloca %struct.buffer, align 8
  store i8** %2, i8*** %4, align 8
  call void @query_chomp(%struct.buffer* sret %5, %struct.buffer* byval(%struct.buffer) align 8 %1)
  %6 = bitcast %struct.buffer* %1 to i8*
  %7 = bitcast %struct.buffer* %5 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %6, i8* align 8 %7, i64 24, i1 false)
  %8 = getelementptr inbounds %struct.buffer, %struct.buffer* %1, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = trunc i64 %9 to i32
  %11 = getelementptr inbounds %struct.buffer, %struct.buffer* %1, i32 0, i32 1
  %12 = load i32, i32* %11, align 8
  %13 = icmp ult i32 %10, %12
  br i1 %13, label %14, label %25

14:                                               ; preds = %3
  %15 = getelementptr inbounds %struct.buffer, %struct.buffer* %1, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = getelementptr inbounds %struct.buffer, %struct.buffer* %1, i32 0, i32 2
  %18 = load i32*, i32** %17, align 8
  %19 = getelementptr inbounds %struct.buffer, %struct.buffer* %1, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = getelementptr inbounds i32, i32* %18, i64 %20
  %22 = load i32, i32* %21, align 4
  %23 = load i8**, i8*** %4, align 8
  %24 = call i32 @query_raise_expected_eof(i64 %16, i32 %22, i8** %23)
  br label %25

25:                                               ; preds = %14, %3
  %26 = bitcast %struct.buffer* %0 to i8*
  %27 = bitcast %struct.buffer* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %26, i8* align 8 %27, i64 24, i1 false)
  ret void
}

declare dso_local void @query_chomp(%struct.buffer* sret, %struct.buffer* byval(%struct.buffer) align 8) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @query_raise_expected_eof(i64, i32, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
